variants bugfix + shipping naming improved

--- a/plugins/default_shipping/lang/de_de.lang
+++ b/plugins/default_shipping/lang/de_de.lang
@@ -1,5 +1,5 @@
-default_shipping.general_costs = Allgemeine Kosten
-default_shipping.general_free_shipping = Allgemeine Gratisversand ab
+default_shipping.general_costs = Brutto-Versandkosten (global)
+default_shipping.general_free_shipping = Gratisversand ab Brutto-Warenkorbwert (global)
 default_shipping.costs_per_country = Versandkosten / Land
-default_shipping.min_order = Mindestbestellung
-default_shipping.shipping_costs = Versandkosten
+default_shipping.min_order = Brutto-Warenkorbwert (Werte absteigend angeben)
+default_shipping.shipping_costs = Brutto-Versandkosten
